--- a/style.css
+++ b/style.css
@@ -9,11 +9,13 @@
 
 #theproblem,
 #PiedPiperCoin,
-#theteam {
+#theteam,
+#backtotop {
     border-top: 84px solid transparent;
     margin-top: -84px;
     background-clip: padding-box;
 }
+
 
 body {
     margin: 0px auto;
@@ -185,7 +187,6 @@ nav {
 
 .theteam {
     font-family: 'Roboto';
-    
     padding-bottom: 16px;
     font-style: normal;
     font-weight: 500;
@@ -224,19 +225,19 @@ nav {
 
 .teamname {
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 28px;
-color: #007765;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    color: #007765;
 }
 
 .teamclass {
     font-family: 'Roboto';
-font-style: italic;
-font-weight: 400;
-font-size: 18px;
-line-height: 21px;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
 
 color: #000000;
 }
@@ -249,12 +250,12 @@ color: #000000;
 
 .podvaltext {
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 21px;
-height: 64px;
-text-align: center;
-color: #FFFFFF;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    height: 64px;
+    text-align: center;
+    color: #FFFFFF;
 }
 
